[tool.poetry]
name = "pytime"
version = "0.1.1"
description = ""
authors = ["mxblsdl <maxblasdel@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pytime="pytime.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
