[tool.poetry]
name = "pytime"
version = "0.2.2"
description = ""
authors = ["mxblsdl <maxblasdel@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pytime="pytime.clock:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
clockify-api-client = "^0.1.0"
polars = "^0.16.7"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
